# map

./: .env.example  .gitignore  CUSTOM_DOMAIN_SETUP.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION.md  QUICKSTART.md  QUICK_START_CUSTOM_DOMAIN.md  R2_INDEX_SETUP.md  README.md  VFR_TILES_README.md  debug_flightbook.py  debug_urls.py  deploy_to_github_pages.sh  generate_vfr_tiles.sh  inspect_html.py  pyproject.toml  r2_index_worker.js  sterling_waypoints.kmz  sterling_waypoints.txt  test_flightbook.py  test_minimap.html  test_server.py  upload_tiles_to_r2.sh  verify_deployment_mode.sh
.github/actions/commit-push-flights/: action.yml
.github/workflows/: README.md  daily-update.yml  manual-update.yml  update.yml
downloads/STERL1/2007/: metadata.json
downloads/STERL1/2008/: metadata.json
downloads/STERL1/2009/: metadata.json
downloads/STERL1/2010/: metadata.json
downloads/STERL1/2011/: metadata.json
downloads/STERL1/2012/: metadata.json
downloads/STERL1/2013/: metadata.json
downloads/STERL1/2014/: metadata.json
downloads/STERL1/2015/: metadata.json
downloads/STERL1/2016/: metadata.json
downloads/STERL1/2017/: 2017_Bob_Fletcher_1305010496.igc  metadata.json  (+16 more)
scripts/: commit_and_push_flights.sh  daily_update.py  generate_map.py  initialize_state.py  r2_sync.py  state_manager.py  update_flights.py
src/olc_downloader/: __init__.py  auth.py  cli.py  config.py  downloader.py  exceptions.py  map_generator.py  metadata.py  r2_uploader.py  satellite_tile_generator.py  scraper_scrapy.py  scrapy_runner.py
sterling_kmz/: Sterling, Massachusetts Version 35.kml
(+252 files in other folders)
